@@ -1,3 +1,8 @@
+2004-09-27  Sergey V. Udaltsov  <svu@gnome.org>
+
+	* gnome-settings-keyboard-xkb.c: fix one GSwitchItXkbConfig memory
+	leak, spotted by kmaraas.
+
 2004-08-30  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* gnome-settings-multimedia-keys.c: applied patch from Pierre Ossman
